mudança no modo dark

--- a/CSS/anos.css
+++ b/CSS/anos.css
@@ -1,13 +1,13 @@
 body {
-    background: rgb(0, 0, 0);
-    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(8, 27, 41, 1) 100%);
+    background: rgb(184, 194, 210);
+    background: radial-gradient(circle, rgba(184, 194, 210, 0.958420868347339) 0%, rgba(184, 204, 235, 1) 100%);
     height: 100vh;
     background-color: black;
 }
 
 .titulo {
     height: 35vh;
-    color: #00ff88;
+    color:  #008044;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -29,14 +29,14 @@ body {
     margin-right: 40px;
     background-color: #0c2333;
     border-radius: 20px;
-    box-shadow: 0px 10px 40px #00ff88;
+    box-shadow: 0px 10px 40px  #008044;
 }
 
 .bimestre>h1 {
     display: flex;
     font-size: 30px;
     width: 8em;
-    color: #00ff88;
+    color: #008044;
     padding-bottom: 10px;
 }
 
