--- a/CSS/index.css
+++ b/CSS/index.css
@@ -10,8 +10,9 @@
 
 
 body {
-    background: rgb(0, 0, 0);
-    background: radial-gradient(circle, rgba(0, 0, 0, 1) 0%, rgba(8, 27, 41, 1) 100%);
+    background: rgb(184, 194, 210);
+    background: radial-gradient(circle, rgba(184, 194, 210, 0.958420868347339) 0%, rgba(184, 204, 235, 1) 100%);
+   
 }
 
 body * {
@@ -29,13 +30,13 @@ body * {
 }
 
 a {
-    color: #000;
-    font-weight: bold;
+    color: white;
+    font-size: 17px;
     text-decoration: none;
 }
 
 .logo>h1 {
-    color: #00ff88;
+    color: #008044;
     text-align: center;
     font-family: 'Poppins', sans-serif;
     font-weight: bold;
@@ -56,7 +57,7 @@ a {
 .ano {
     margin: 25px;
     border-radius: 15px;
-    background-color: #00ff88;
+    background: #008044;
     width: 10vw;
     height: 10vh;
     text-transform: uppercase;
@@ -65,10 +66,6 @@ a {
     border: none;
 
 
-}
-
-a:hover {
-    color: black
 }
 
 
@@ -124,13 +121,4 @@ a:hover {
         justify-content: center;
     }
 
-}
-
-.ano.dark {
-    background: #008044;
-
-}
-
-#logo.dark {
-    color: #008044;
 }
