--- a/CSS/index.css
+++ b/CSS/index.css
@@ -54,17 +54,19 @@ a {
 
 }
 
-.ano {
-    margin: 25px;
-    border-radius: 15px;
-    background: #008044;
-    width: 10vw;
+.btn_ano {
+
+    background-color: #008044;
+    width: 15vw;
     height: 10vh;
+    font-size: 20px;
+    cursor: pointer;
+    border: none;
+    margin: 20px;
     text-transform: uppercase;
     font-weight: bold;
-    box-shadow: 1px 1px 20px #ffffff56;
-    border: none;
-
+    color: rgb(210, 228, 244);
+    border-radius: 15px;
 
 }
 
@@ -75,7 +77,7 @@ a {
     }
 
 
-    .ano {
+    .btn_ano {
         display: flex;
         width: 50vw;
         align-items: center;
@@ -89,7 +91,7 @@ a {
         font-size: 7rem;
     }
 
-    .ano {
+    .btn_ano {
         display: flex;
         width: 50vw;
         align-items: center;
@@ -101,7 +103,6 @@ a {
 
     .logo>h1 {
         font-size: 5rem;
-        
         left: 10%;
     }
 
@@ -112,7 +113,7 @@ a {
 
     }
 
-    .ano {
+    .btn_ano {
         display: flex;
         margin-right: 0px;
         margin-left: 0px;
